--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="add">Add</string>
     <string name="memes">Memes</string>
     <string name="matches">Matches</string>
+    <string name="friends">Friends</string>
     <string name="top">Top</string>
 
     <string name="user_no_memes">You haven\'t added any memes :(</string>
