friends screens added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,10 @@
     <string name="switch_view_button">Switch view button</string>
     <string name="settings_button">Settings button</string>
     <string name="add_new_meme">Add new meme</string>
-    <string name="search">Search</string>
     <string name="title">title</string>
     <string name="confirm">Confirm</string>
+    <string name="feed">Feed</string>
+    <string name="search">Search</string>
+    <string name="dummy">DUMMY</string>
+    <string name="inbox">Inbox</string>
 </resources>
