--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="meme">Meme</string>
     <string name="name">Name</string>
     <string name="url">URL</string>
+    <string name="follow_button">Follow button</string>
 </resources>
